News in 41, xxxx-yy-zz
----------------------------
*

News in 41.alpha, 2021-07-17
----------------------------
* Replace use of Tepl and AMTK
* Use sourceview4 in the snap build
* Enable OpenLink plugin by default
* Warn when trying to open a big file and allow to cancel
* Port open-selector to GDateTime
* Allow disabling gspell and python options
* Fix parsing of font-family strgins when they contain whitespace
* Translation updates.

News in 40.1, 2021-04-17
------------------------
* Use document folder when opening new files
* Huge CPU consumption when a folder with content is deleted
* Updated translations

News in 40, 2021-03-19
----------------------------
* Remove all the deprecated API.
* file-browser: drop use of confirm-trash
* Translation updates.

Tepl-ification:
* Use tepl_pango_font_description_to_css().
* Use TeplLanguageChooser's.
* Use TeplProgressInfoBar.
* Start to use TeplBuffer and TeplFile APIs.
  As a result the new tabs are now named "Untitled File", not
  "Untitled Document".

News in 3.38.1, 2020-11-20
--------------------------
* AppData: change donation URL to Liberapay.
* Improvements to the user manual.
* Translation updates.

News in 3.38.0, 2020-09-11
--------------------------
* Translation updates.

News in 3.37.92, 2020-09-04
---------------------------
* A few code refactorings.
* CI: small update.
* Translation updates.

News in 3.37.3, 2020-07-03
--------------------------
* Start to migrate to GtkFileChooserNative.
* User manual: remove the page with the list of keyboard shortcuts, it was
  redundant with the new Shortcuts window.
* Translation updates.

News in 3.37.2, 2020-05-29
--------------------------
* gedit is now available on the Microsoft Store!
* Remove the checkupdate plugin (no longer useful).
* GSettings: revisit the set of plugins activated by default.
* Change app description.
* Write a script to have a list of plugins with their description.
* Documentation updates.