@@ -36,7 +36,7 @@
   <translation type="gettext">gedit</translation>
   <content_rating type="oars-1.1" />
   <releases>
-    <release version="41.alpha" date="2021-07-17" />
+    <release version="41" date="2022-02-14" />
     <release version="40.1" date="2021-04-17" />
     <release version="40.0" date="2021-03-19" />
     <release version="3.38.0" date="2020-09-11" />
